# skytunnel

./: .env.example  .gitignore  CLAUDE.md  README.md  config.example.yaml  plan.md  pyproject.toml
docker/agent/: Dockerfile  docker-compose.yml
docker/endpoint/: Dockerfile  docker-compose.yml  nginx.conf.template
scripts/: docker-build.sh  install.sh  local-test.sh  setup-keys.sh  verify-connectivity.sh  wizard-agent.sh  wizard-endpoint.sh
src/tunnelctl/: __init__.py  __main__.py  config.py  state.py
src/tunnelctl/agent/: __init__.py  health.py  manager.py  tunnel.py
src/tunnelctl/api/: __init__.py  app.py
src/tunnelctl/api/routes/: config.py  endpoints.py  status.py  tunnels.py  web.py
src/tunnelctl/bot/: telegram.py
src/tunnelctl/cli/: main.py
src/tunnelctl/endpoint/: caddy.py  nginx.py  service.py
src/tunnelctl/web/static/: app.js  style.css
src/tunnelctl/web/templates/: base.html  dashboard.html  logs.html  tunnels.html
tests/: conftest.py  test_api.py  test_config.py  test_manager.py  test_nginx_gen.py  test_state.py
